--- a/homework4/index.html
+++ b/homework4/index.html
@@ -33,20 +33,20 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse aliquam numquam ducimus ea? Ipsa exercitationem corrupti mollitia expedita tempore. Quibusdam ea non sequi. Delectus ratione quas earum similique, accusamus et.</p>
         </section>
         <section class="container box2 flex">
-            <ul class="listscroll">
+            <ul class="listscroll container-30">
                 <li><img class="icon" src="https://pngicon.ru/file/uploads/like.png" alt="Значок">Heading title one</li>
-                <li><img class="icon" src="https://pngicon.ru/file/uploads/like.png" alt="Значок">Heading title one</li>
-                <li><img class="icon" src="https://pngicon.ru/file/uploads/like.png" alt="Значок">Heading title one</li>
-                <li><img class="icon" src="https://pngicon.ru/file/uploads/like.png" alt="Значок">Heading title one</li>
-                <li><img class="icon" src="https://pngicon.ru/file/uploads/like.png" alt="Значок">Heading title one</li>
-                <li><img class="icon" src="https://pngicon.ru/file/uploads/like.png" alt="Значок">Heading title one</li>
-                <li><img class="icon" src="https://pngicon.ru/file/uploads/like.png" alt="Значок">Heading title one</li>
-                <li><img class="icon" src="https://pngicon.ru/file/uploads/like.png" alt="Значок">Heading title one</li>
+                <li><img class="icon" src="https://png.pngtree.com/svg/20160913/magnifier_50783.png" alt="Значок">Heading title one</li>
+                <li><img class="icon" src="https://icon-library.net/images/person-icon/person-icon-11.jpg" alt="Значок">Heading title one</li>
+                <li><img class="icon" src="https://image.flaticon.com/icons/png/512/25/25377.png" alt="Значок">Heading title one</li>
+                <li><img class="icon" src="http://icons.iconarchive.com/icons/iconsmind/outline/512/Arrow-Right-icon.png" alt="Значок">Heading title one</li>
+                <li><img class="icon" src="http://icons.iconarchive.com/icons/iconsmind/outline/512/Mail-icon.png" alt="Значок">Heading title one</li>
+                <li><img class="icon" src="https://www.shareicon.net/data/512x512/2016/04/25/754992_gear_512x512.png" alt="Значок">Heading title one</li>
+                <li><img class="icon" src="http://iconshow.me/media/images/Mixed/Free-Flat-UI-Icons/png/512/heart-24-512.png" alt="Значок">Heading title one</li>
             </ul>
-            <div>
+            <div container-70>
                 <img src="https://image.flaticon.com/sprites/new_packs/126466-multimedia-collection.png" alt="Значки" class="box2-img">
                 <h3 class="box2-text ">Lorem ipsum dolor sit amet.</h3>
-                <p class="box2-text1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta delectus, harum,   </p>
+                <p class="box2-text1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta delectus, harum,Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta delectus, harum,   </p>
             </div>
         </section>
         <section class="box3">
@@ -67,7 +67,7 @@
                 <img src="https://www.virginmedia.com/content/dam/virginmedia/dotcom/images/mobile-browse/Apple/iPhone-Xr/blue/iphone-xr-blue-front.png" alt="Phone" class="box4-img">
                 <img src="https://www.virginmedia.com/content/dam/virginmedia/dotcom/images/mobile-browse/Apple/iPhone-Xr/blue/iphone-xr-blue-front.png" alt="Phone" class="box4-img">
             </div>
-            <div class="box4-text container flex">
+            <div class=" container flex">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti, odio?</p>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti, odio?</p>
                 <p >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti, odio?</p>
@@ -85,7 +85,7 @@
         </section>
         <section class="box5 container">
             <h2>How people say about us</h2>
-            <img src="https://icon-library.net/images/icon-human/icon-human-19.jpg" alt="Face">
+            <img src="images/trump.png" alt="Face">
             <p> "Lorem ipsum dolor sit, amet consectetur adipisicing elit." <br> <h4>- Donald Trump</h4></p>
             <div class="pagination">
                 <a href="#"></a>
