--- a/homework4/index.html
+++ b/homework4/index.html
@@ -85,7 +85,7 @@
         </section>
         <section class="box5 container">
             <h2>How people say about us</h2>
-            <img src="images/trump.png" alt="Face">
+            <img src="trump.png" alt="Face">
             <p> "Lorem ipsum dolor sit, amet consectetur adipisicing elit." <br> <h4>- Donald Trump</h4></p>
             <div class="pagination">
                 <a href="#"></a>
