--- a/lits/homework3/workshops.html
+++ b/lits/homework3/workshops.html
@@ -13,7 +13,7 @@
    <hr/>
    <main>
         <nav class="topnav">
-                <h2><a href="homework3.html">Головна</a>
+                <h2><a href="index.html">Головна</a>
                 <a href="speakers.html">Спікери</a>
                 <a href="workshops.html">Воркшопи</a></h2>
         </nav>
